primera versión html

--- a/index.html
+++ b/index.html
@@ -5,88 +5,113 @@
     <meta name="description" content="IMClick-Project: Recursos académicos de Olimpiada de Matemáticas, Olimpiada de Informática e Ingeniería Química">
     <meta name="author" content="IMClick-Project">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>IMClick-Project</title>
 </head>
 
-<body>
+<body marginwidth="0" marginheight="0">
 
     <header>
-        <h1>IMClick-Project</h1>
-        <p>Recursos académicos accesibles para la comunidad</p>
-
-        <nav>
-            <a href="#sobre">Sobre el proyecto</a> |
-            <a href="#areas">Áreas</a> |
-            <a href="#recursos">Recursos</a> |
-            <a href="#contacto">Contacto</a>
-        </nav>
-    </header>
+        <table width="80%" align="center" cellpadding="10">
+            <tr>
+            <td align="right" valign="middle">
+                <img src="logo2.png" alt="Logo de IMClick-Project">
+            </td>
+            <td align="center" valign="middle">
+                <font face="Verdana" size="4" color="#ce1c2b">
+                <b>
+                    Iniciativa personal para compartir recursos académicos de forma clara, accesible y práctica
+                </b>
+                </font>
+                <br>
+                <nav>
+                <font face="Verdana" size="4">
+                    <b>
+                        <a href="#areas">Áreas</a> |
+                        <a href="#recursos">Recursos</a> |
+                        <a href="#contacto">Contacto</a>
+                    </b>
+                </font>
+                </nav>
+            </td>
+            </tr>
+        </table>
+        </header>
 
     <main>
-
-        <section id="sobre">
-            <h2>¿Qué es IMClick-Project?</h2>
-            <p>
-                IMClick-Project es una iniciativa personal para compartir recursos
-                educativos de Olimpiada de Matemáticas, Olimpiada de Informática
-                e Ingeniería Química de forma clara, accesible y práctica.
-            </p>
-            <p>
-                El objetivo es apoyar a estudiantes interesados en estas áreas
-                y, a futuro, desarrollar contenido más avanzado en plataformas
-                educativas.
-            </p>
-        </section>
-
         <section id="areas">
-            <h2>Áreas de conocimiento</h2>
-
-            <article class="area">
-                <img src="llaves.png" alt="Olimpiada de Informática"> <h3>Olimpiada de Informática</h3>
-                <p>Algoritmos, lógica y programación competitiva.</p>
-            </article>
-            
-            <article class="area">
-                <img src="compas.png" alt="Olimpiada de Matemáticas"> <h3>Olimpiada de Matemáticas</h3>
-                <p>Teoría, razonamiento y resolución de problemas de concursos.</p>
-            </article>
-
-            <article class="area">
-                <img src="matraz.png" alt="Ingeniería Química"> <h3>Ingeniería Química</h3>
-                <p>Teoría aplicada, ejercicios y procesos reales.</p>
-            </article>
+            <center><font face="Verdana" color="#3a080c">
+                <h2>Áreas de conocimiento</h2>
+            </font></center>   
+            <table width="80%" align="center" cellpadding="15" border="3" bordercolor="#ce1c2b">
+                <tr>
+                <td width="33%" align="center" valign="top">
+                    <img src="logoI.png" alt="Olimpiada de Informática" height="200">
+                    <font face="Verdana" color="#ce1c2b"><h3>Olimpiada de Informática</h3></font>
+                    <p>
+                    <font face="Verdana" size="3" color="#3a080c">Algoritmos, lógica y programación competitiva</font>
+                    </p>
+                </td>
+                <td width="33%" align="center" valign="top">
+                    <img src="logoM.png" alt="Olimpiada de Matemáticas" height="200">
+                    <font face="Verdana" color="#ce1c2b"><h3>Olimpiada de Matemáticas</h3></font>
+                    <p>
+                    <font face="Verdana" size="3" color="#3a080c">Teoría, razonamiento y resolución de problemas de concursos</font>
+                    </p>
+                </td>
+                <td width="33%" align="center" valign="top">
+                    <img src="logoC.png" alt="Ingeniería Química" height="200">
+                    <font face="Verdana" color="#ce1c2b"><h3>Ingeniería Química</h3></font>
+                    <p>
+                    <font face="Verdana" size="3" color="#3a080c">Fundamentos, ejercicios y recursos de aprendizaje</font>
+                    </p>
+                </td>
+                </tr>
+            </table>
         </section>
-
         <section id="recursos">
-            <h2>Recursos disponibles</h2>
-
-            <ul>
-                <li>Guías introductorias (próximamente)</li>
-                <li>Problemas resueltos</li>
-                <li>Recomendaciones de estudio</li>
-            </ul>
-
-            <img src="logo.png" alt="Imagen representativa del proyecto">
+        <center>
+            <font face="Verdana" color="#3a080c">
+            <h2>Recursos (próximamente)</h2>
+            </font>
+            <font face="Verdana" size="3" color="#ce1c2b">
+                <p>Notas con ejercicios aplicados</p> 
+                <p>Códigos y simuladores documentados</p>
+                <p>Cursos y videos/animaciones explicativos</p>
+            </font>
+        </center>
         </section>
-
         <section id="contacto">
-            <h2>Contacto</h2>
-
-            <p>Si te interesa el proyecto o quieres colaborar:</p>
-
-            <form>
-                <label for="email">Correo electrónico:</label><br>
-                <input type="email" id="email" name="email" placeholder="tu@email.com"><br><br>
-
-                <input type="submit" value="Enviar">
-            </form>
+            <center>
+                <font face="Verdana" color="#3a080c">
+                <h2>Contacto</h2>
+                </font>
+                <font face="Verdana" size="3" color="#ce1c2b">
+                <p>Si te interesa el proyecto o quieres colaborar, envía un mensaje:</p>
+                </font>
+            </center>
+            <table width="60%" align="center" cellpadding="10" border="2" bordercolor="#ce1c2b">
+                <tr>
+                <td align="center">
+                    <form>
+                    <font face="Verdana" size="3" color="#3a080c">
+                        <label for="email">Correo electrónico:</label><br>
+                        <input type="email" id="email" name="email" placeholder="tu@email.com">
+                        <br><br>
+                        <label for="mensaje">Mensaje:</label><br>
+                        <textarea id="mensaje" name="mensaje" rows="5" cols="40"
+                        placeholder="Escribe tu mensaje aquí"></textarea>
+                        <br><br>
+                        <input type="submit" value="Enviar mensaje">
+                    </font>
+                    </form>
+                </td>
+                </tr>
+            </table>
         </section>
-
     </main>
-
     <footer>
-        <p>© 2026 IMClick-Project</p>
+        <font face="Verdana" size="3" color="#ce1c2b"><p>©2026 IMClick-Project</p></font>
     </footer>
-
 </body>
 </html>
